Added button functionality to the form

--- a/AccountFormsApp/AccountFormsApp.csproj
+++ b/AccountFormsApp/AccountFormsApp.csproj
@@ -78,5 +78,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj">
+      <Project>{7F8E1B36-1EF6-47B3-A64E-81E17BB2E502}</Project>
+      <Name>Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Services\Services.csproj">
+      <Project>{606caa51-0fa1-4400-b0e0-84058de73304}</Project>
+      <Name>Services</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
